[project]
name = "immersionmu"
version = "0.1.0"
description = "A starter Python application for immersionmu."
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "rishika-r-jain"}]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.scripts]
immersionmu = "app:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
